# fedcrew

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.py  contrastive_cosine.py  datasets.py  debug_resnet.ipynb  flex_crp.py  imagenet_subset_train.pkl  imagenetsubset.py  irm_w.py  main.py  models.py  multitask_waterbirds.py  pyproject.toml  test_partition.py
.github/workflows/: linter.yml
scripts/: fetch_wandb_done_runs.py  run_cluster_matrix.sh
tests/: test_ablation_runner.py  test_alignment_utils.py  test_anchor_sensitivity_runner.py  test_checkpoint_utils.py  test_config.py  test_crp_utils.py  test_data_utils.py  test_flex_boilerplate.py  test_logging_utils.py  test_moon.py  test_training.py
utils/: alignment_utils.py  checkpoint_utils.py  colored_mnist.py  crp_utils.py  data_utils.py  feddyn.py  fednova.py  fedprox.py  flex_boilerplate.py  logging_utils.py  moon.py  prueba_crp.py  seed_utils.py  train_resnet.py  train_resnet_transfer.py  training.py  waterbirds.py
