[project]
name = "causal-crp-aggregation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.4.0",
    "flexible-fl>=0.7.0",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "wandb>=0.23.1",
    "zennit-crp>=0.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
